# Kagami

./: .gitignore  .gitmodules  10-Min-Intro-CN.md  CMakeLists.txt  LICENSE  README.md  To-Do.md
.github/ISSUE_TEMPLATE/: bug--.md  bug_report.md
example/: brainfxxk_interpreter_2.kagami  draggable_image.kagami  fibonacci.kagami  fibonacci_recursive.kagami  function_as_argument.kagami  music_player.kagami  music_player2.kagami  parse_path_string.kagami  path_string_parsing.kagami  rectangle.kagami  sorting_test.kagami  table.kagami  window1.kagami  window2.kagami  write_file.kagami
lib/: types.kagami
plugin/: CMakeLists.txt
plugin/SimpleFunction/: CMakeLists.txt  PluginSample.cpp  PluginSample.h  PluginSample.sln  PluginSample.vcxproj  PluginSample.vcxproj.filters  dllmain.cpp  header.h  kagamicommon.cpp  kagamicommon.h
sample/: InternalTypeTest.kagami  ParsingAndCallingTest.kagami  sample1.kagami  sample2.rs  sample3.kagami  sample4.kagami  sample4.rs  sample5.kagami
script/: README.md  Sample-BubbleSorting.kagami  Sample-CaseAndWhen.kagami  Sample-ContinueAndBreak.kagami  Sample-Function.kagami  Sample-Function2.kagami  Sample-Function3.kagami  Sample-GeneralTest.kagami  Sample-Parsing.kagami  Sample-ReadFile.kagami  Sample-Stack.kagami  Sample-WriteFile.kagami  SomeWords.txt  basic_test.kagami  benmark.kagami  benmark2.kagami  closure.kagami  continue_break.kagami  function.kagami  helloworld.kagami  iterator_test.kagami  parameter.kagami  read_file.kagami  recursion.kagami  tcp_client.kagami  tcp_server.kagami  write_file.kagami
script/deprecated/: tcp_client.kagami
script/sample/: basic_test.kagami  benmark.kagami  benmark2.kagami  benmark3.kagami  benmark4.kagami  closure.kagami  for_each.kagami  function.kagami  iterator_test.kagami  read_file.kagami  tcp_server.kagami
script/something_funny/: brainfxxk_interpreter.kagami  brainfxxk_interpreter_2.kagami  fibonacci.kagami  music_player.kagami  music_player2.kagami  parse_path_string.kagami
src/: CMakeLists.txt  CommonIncludes.h  SEIncludes.h  SEParser.cpp  SEParser.h  SESuzu.cpp  SVM.cpp  SVM.h  Scarlet.cpp  ScarletFramework.cpp  ScarletFramework.h  ScarletIncludes.h  Suzu.cpp  akane.h  akane_string.h  analyzer.cc  analyzer.cpp  analyzer.h  argument.h  audio.cpp  audio.h  base_container.cc  base_container.h  base_type.cc  base_type.cpp  base_type.h  basic_comp.cc  basic_string.h  basicutility.cpp  basicutility.h  common.h  component.cc  component.cpp  component.h  components.h  console_util.cc  console_util.h  containers.cc  containers.h  datapack.h  (+94 more)
src/akane/: akane.cpp  akane.h  akane_list.h  akane_stack.h  akane_string.cpp  akane_string.h  akane_stringbuilder.h  akane_util.cpp  akane_util.h
src/dawn/: dawn.common.cc  dawn.common.h  dawn.sound.h  dawn.ui.h  dawn.window.cc  dawn.window.h
src/suzu.akane/: akane_stringbuilder.h  akane_util.h
vsproject/Kagami/: Kagami.sln  Kagami.vcxproj  Kagami.vcxproj.filters  Resource.aps  Resource.rc  script-output.txt
